# QuaZip

./: CMakeLists.txt
SourceMaker/: SourceMaker.cpp  SourceMaker.h  SourceMaker.qrc  SourceMaker.ui  SourceMaker.vcxproj  SourceMaker.vcxproj.filters  main.cpp
SourceMaker/GeneratedFiles/: qrc_SourceMaker.cpp  ui_SourceMaker.h
SourceMaker/GeneratedFiles/Debug/: moc_SourceMaker.cpp
SourceMaker/x64/Debug/: moc_SourceMaker.asm  qrc_SourceMaker.asm
SourceMaker/x64/Debug/SourceMaker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SourceMaker.lastbuildstate  SourceMaker.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.write.1u.tlog
SourceMaker/x64/Release/: moc_SourceMaker.asm  qrc_SourceMaker.asm
SourceMaker/x64/Release/SourceMaker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SourceMaker.lastbuildstate  SourceMaker.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
quazip/: CMakeLists.txt  JlCompress.cpp  UpgradeLog.htm  quazip.cpp
thirdPart/: libCopy.bat
thirdPart/include/: JlCompress.h
thirdPart/zlibdebug/: quazip.lib  quazip_staticd.lib  zlibd.lib  zlibstaticd.lib
thirdPart/zlibrelease/: quazip.lib  quazip_static.lib  zlib.lib  zlibstatic.lib
